parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CCOMMENT
    NUMBER
    QUESTION
    UCCCOMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> global_declaration_list
Rule 2     global_declaration_list -> global_declaration
Rule 3     global_declaration_list -> global_declaration_list global_declaration
Rule 4     global_declaration -> declaration
Rule 5     global_declaration -> function_definition
Rule 6     declaration -> decl_body SEMI
Rule 7     declaration_list -> declaration
Rule 8     declaration_list -> declaration_list declaration
Rule 9     declaration_list_opt -> declaration_list
Rule 10    declaration_list_opt -> empty
Rule 11    decl_body -> type_specifier init_declarator_list_opt
Rule 12    pointer -> TIMES
Rule 13    pointer -> TIMES pointer
Rule 14    declarator -> direct_declarator
Rule 15    declarator -> pointer direct_declarator
Rule 16    init_declarator -> declarator
Rule 17    init_declarator -> declarator ASSIGN initializer
Rule 18    init_declarator_list -> init_declarator
Rule 19    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 20    init_declarator_list_opt -> init_declarator_list
Rule 21    init_declarator_list_opt -> empty
Rule 22    parameter_declaration -> type_specifier declarator
Rule 23    parameter_list -> parameter_declaration
Rule 24    parameter_list -> parameter_list COMMA parameter_declaration
Rule 25    direct_declarator -> identifier
Rule 26    direct_declarator -> LPAREN declarator RPAREN
Rule 27    direct_declarator -> direct_declarator LBRACKET constant_expression_opt RBRACKET
Rule 28    direct_declarator -> direct_declarator LPAREN identifier_list_opt RPAREN
Rule 29    direct_declarator -> direct_declarator LPAREN parameter_list RPAREN
Rule 30    initializer -> assignment_expression
Rule 31    initializer -> LBRACES initializer_list RBRACES
Rule 32    initializer -> LBRACES initializer_list COMMA RBRACES
Rule 33    initializer_list -> initializer
Rule 34    initializer_list -> initializer_list COMMA initializer
Rule 35    postfix_expression -> primary_expression
Rule 36    postfix_expression -> postfix_expression PLUS_PLUS
Rule 37    postfix_expression -> postfix_expression MINUS_MINUS
Rule 38    postfix_expression -> postfix_expression LPAREN RPAREN
Rule 39    postfix_expression -> postfix_expression LPAREN argument_expression RPAREN
Rule 40    postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 41    argument_expression -> assignment_expression
Rule 42    argument_expression -> argument_expression COMMA assignment_expression
Rule 43    expression -> assignment_expression
Rule 44    expression -> expression COMMA assignment_expression
Rule 45    primary_expression -> identifier
Rule 46    primary_expression -> constant
Rule 47    primary_expression -> LPAREN expression RPAREN
Rule 48    cast_expression -> unary_expression
Rule 49    cast_expression -> LPAREN type_specifier RPAREN cast_expression
Rule 50    assignment_expression -> binary_expression
Rule 51    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 52    assignment_operator -> ASSIGN
Rule 53    assignment_operator -> ASSIGN_TIMES
Rule 54    assignment_operator -> ASSIGN_DIVIDE
Rule 55    assignment_operator -> ASSIGN_MOD
Rule 56    assignment_operator -> ASSIGN_PLUS
Rule 57    assignment_operator -> ASSIGN_MINUS
Rule 58    unary_expression -> postfix_expression
Rule 59    unary_expression -> PLUS_PLUS unary_expression
Rule 60    unary_expression -> MINUS_MINUS unary_expression
Rule 61    unary_expression -> unary_operator cast_expression
Rule 62    binary_expression -> cast_expression
Rule 63    binary_expression -> binary_expression TIMES binary_expression
Rule 64    binary_expression -> binary_expression DIVIDE binary_expression
Rule 65    binary_expression -> binary_expression MOD binary_expression
Rule 66    binary_expression -> binary_expression PLUS binary_expression
Rule 67    binary_expression -> binary_expression MINUS binary_expression
Rule 68    binary_expression -> binary_expression SMALLER binary_expression
Rule 69    binary_expression -> binary_expression SMALLER_EQUAL binary_expression
Rule 70    binary_expression -> binary_expression BIGGER binary_expression
Rule 71    binary_expression -> binary_expression BIGGER_EQUAL binary_expression
Rule 72    binary_expression -> binary_expression EQUAL binary_expression
Rule 73    binary_expression -> binary_expression DIFFERENT binary_expression
Rule 74    binary_expression -> binary_expression AND binary_expression
Rule 75    binary_expression -> binary_expression OR binary_expression
Rule 76    constant_expression -> binary_expression
Rule 77    constant_expression_opt -> constant_expression
Rule 78    constant_expression_opt -> empty
Rule 79    identifier -> ID
Rule 80    identifier_list_opt -> identifier_list
Rule 81    identifier_list_opt -> empty
Rule 82    identifier_list -> identifier
Rule 83    identifier_list -> identifier_list COMMA identifier
Rule 84    unary_operator -> UPPERSAND
Rule 85    unary_operator -> TIMES
Rule 86    unary_operator -> PLUS
Rule 87    unary_operator -> MINUS
Rule 88    unary_operator -> NOT
Rule 89    type_specifier -> VOID
Rule 90    type_specifier -> CHAR
Rule 91    type_specifier -> INT
Rule 92    type_specifier -> FLOAT
Rule 93    constant -> INT_CONST
Rule 94    constant -> FLOAT_CONST
Rule 95    constant -> STRING_CONST
Rule 96    jump_statement -> BREAK SEMI
Rule 97    jump_statement -> RETURN expression_opt SEMI
Rule 98    block_item -> declaration
Rule 99    block_item -> statement
Rule 100   block_item_list -> block_item
Rule 101   block_item_list -> block_item_list block_item
Rule 102   compound_statement -> LBRACES block_item_list RBRACES
Rule 103   selection_statement -> IF LPAREN expression RPAREN statement
Rule 104   selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 105   iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 106   iteration_statement -> FOR LPAREN expression_opt SEMI expression_opt SEMI expression_opt RPAREN statement
Rule 107   iteration_statement -> FOR LPAREN declaration expression_opt SEMI expression_opt RPAREN statement
Rule 108   expression_statement -> expression_opt SEMI
Rule 109   assert_statement -> ASSERT expression SEMI
Rule 110   print_statement -> PRINT LPAREN expression_opt RPAREN SEMI
Rule 111   read_statement -> READ LPAREN argument_expression RPAREN SEMI
Rule 112   statement -> expression_statement
Rule 113   statement -> selection_statement
Rule 114   statement -> compound_statement
Rule 115   statement -> iteration_statement
Rule 116   statement -> jump_statement
Rule 117   statement -> assert_statement
Rule 118   statement -> print_statement
Rule 119   statement -> read_statement
Rule 120   expression_opt -> expression
Rule 121   expression_opt -> empty
Rule 122   function_definition -> type_specifier declarator declaration_list_opt compound_statement
Rule 123   function_definition -> declarator declaration_list_opt compound_statement
Rule 124   empty -> <empty>

Terminals, with rules where they appear

AND                  : 74
ASSERT               : 109
ASSIGN               : 17 52
ASSIGN_DIVIDE        : 54
ASSIGN_MINUS         : 57
ASSIGN_MOD           : 55
ASSIGN_PLUS          : 56
ASSIGN_TIMES         : 53
BIGGER               : 70
BIGGER_EQUAL         : 71
BREAK                : 96
CCOMMENT             : 
CHAR                 : 90
COMMA                : 19 24 32 34 42 44 83
DIFFERENT            : 73
DIVIDE               : 64
ELSE                 : 104
EQUAL                : 72
FLOAT                : 92
FLOAT_CONST          : 94
FOR                  : 106 107
ID                   : 79
IF                   : 103 104
INT                  : 91
INT_CONST            : 93
LBRACES              : 31 32 102
LBRACKET             : 27 40
LPAREN               : 26 28 29 38 39 47 49 103 104 105 106 107 110 111
MINUS                : 67 87
MINUS_MINUS          : 37 60
MOD                  : 65
NOT                  : 88
NUMBER               : 
OR                   : 75
PLUS                 : 66 86
PLUS_PLUS            : 36 59
PRINT                : 110
QUESTION             : 
RBRACES              : 31 32 102
RBRACKET             : 27 40
READ                 : 111
RETURN               : 97
RPAREN               : 26 28 29 38 39 47 49 103 104 105 106 107 110 111
SEMI                 : 6 96 97 106 106 107 108 109 110 111
SMALLER              : 68
SMALLER_EQUAL        : 69
STRING_CONST         : 95
TIMES                : 12 13 63 85
UCCCOMMENT           : 
UPPERSAND            : 84
VOID                 : 89
WHILE                : 105
error                : 

Nonterminals, with rules where they appear

argument_expression  : 39 42 111
assert_statement     : 117
assignment_expression : 30 41 42 43 44 51
assignment_operator  : 51
binary_expression    : 50 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76
block_item           : 100 101
block_item_list      : 101 102
cast_expression      : 49 61 62
compound_statement   : 114 122 123
constant             : 46
constant_expression  : 77
constant_expression_opt : 27
decl_body            : 6
declaration          : 4 7 8 98 107
declaration_list     : 8 9
declaration_list_opt : 122 123
declarator           : 16 17 22 26 122 123
direct_declarator    : 14 15 27 28 29
empty                : 10 21 78 81 121
expression           : 40 44 47 103 104 105 109 120
expression_opt       : 97 106 106 106 107 107 108 110
expression_statement : 112
function_definition  : 5
global_declaration   : 2 3
global_declaration_list : 1 3
identifier           : 25 45 82 83
identifier_list      : 80 83
identifier_list_opt  : 28
init_declarator      : 18 19
init_declarator_list : 19 20
init_declarator_list_opt : 11
initializer          : 17 33 34
initializer_list     : 31 32 34
iteration_statement  : 115
jump_statement       : 116
parameter_declaration : 23 24
parameter_list       : 24 29
pointer              : 13 15
postfix_expression   : 36 37 38 39 40 58
primary_expression   : 35
print_statement      : 118
program              : 0
read_statement       : 119
selection_statement  : 113
statement            : 99 103 104 104 105 106 107
type_specifier       : 11 22 49 122
unary_expression     : 48 51 59 60
unary_operator       : 61

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . global_declaration_list
    (2) global_declaration_list -> . global_declaration
    (3) global_declaration_list -> . global_declaration_list global_declaration
    (4) global_declaration -> . declaration
    (5) global_declaration -> . function_definition
    (6) declaration -> . decl_body SEMI
    (122) function_definition -> . type_specifier declarator declaration_list_opt compound_statement
    (123) function_definition -> . declarator declaration_list_opt compound_statement
    (11) decl_body -> . type_specifier init_declarator_list_opt
    (89) type_specifier -> . VOID
    (90) type_specifier -> . CHAR
    (91) type_specifier -> . INT
    (92) type_specifier -> . FLOAT
    (14) declarator -> . direct_declarator
    (15) declarator -> . pointer direct_declarator
    (25) direct_declarator -> . identifier
    (26) direct_declarator -> . LPAREN declarator RPAREN
    (27) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (28) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN
    (29) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (12) pointer -> . TIMES
    (13) pointer -> . TIMES pointer
    (79) identifier -> . ID

    VOID            shift and go to state 9
    CHAR            shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    LPAREN          shift and go to state 16
    TIMES           shift and go to state 17
    ID              shift and go to state 18

    program                        shift and go to state 1
    global_declaration_list        shift and go to state 2
    global_declaration             shift and go to state 3
    declaration                    shift and go to state 4
    function_definition            shift and go to state 5
    decl_body                      shift and go to state 6
    type_specifier                 shift and go to state 7
    declarator                     shift and go to state 8
    direct_declarator              shift and go to state 13
    pointer                        shift and go to state 14
    identifier                     shift and go to state 15

state 1

    (0) S' -> program .



state 2

    (1) program -> global_declaration_list .
    (3) global_declaration_list -> global_declaration_list . global_declaration
    (4) global_declaration -> . declaration
    (5) global_declaration -> . function_definition
    (6) declaration -> . decl_body SEMI
    (122) function_definition -> . type_specifier declarator declaration_list_opt compound_statement
    (123) function_definition -> . declarator declaration_list_opt compound_statement
    (11) decl_body -> . type_specifier init_declarator_list_opt
    (89) type_specifier -> . VOID
    (90) type_specifier -> . CHAR
    (91) type_specifier -> . INT
    (92) type_specifier -> . FLOAT
    (14) declarator -> . direct_declarator
    (15) declarator -> . pointer direct_declarator
    (25) direct_declarator -> . identifier
    (26) direct_declarator -> . LPAREN declarator RPAREN
    (27) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (28) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN
    (29) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (12) pointer -> . TIMES
    (13) pointer -> . TIMES pointer
    (79) identifier -> . ID

    $end            reduce using rule 1 (program -> global_declaration_list .)
    VOID            shift and go to state 9
    CHAR            shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    LPAREN          shift and go to state 16
    TIMES           shift and go to state 17
    ID              shift and go to state 18

    global_declaration             shift and go to state 19
    declaration                    shift and go to state 4
    function_definition            shift and go to state 5
    decl_body                      shift and go to state 6
    type_specifier                 shift and go to state 7
    declarator                     shift and go to state 8
    direct_declarator              shift and go to state 13
    pointer                        shift and go to state 14
    identifier                     shift and go to state 15

state 3

    (2) global_declaration_list -> global_declaration .

    VOID            reduce using rule 2 (global_declaration_list -> global_declaration .)
    CHAR            reduce using rule 2 (global_declaration_list -> global_declaration .)
    INT             reduce using rule 2 (global_declaration_list -> global_declaration .)
    FLOAT           reduce using rule 2 (global_declaration_list -> global_declaration .)
    LPAREN          reduce using rule 2 (global_declaration_list -> global_declaration .)
    TIMES           reduce using rule 2 (global_declaration_list -> global_declaration .)
    ID              reduce using rule 2 (global_declaration_list -> global_declaration .)
    $end            reduce using rule 2 (global_declaration_list -> global_declaration .)


state 4

    (4) global_declaration -> declaration .

    VOID            reduce using rule 4 (global_declaration -> declaration .)
    CHAR            reduce using rule 4 (global_declaration -> declaration .)
    INT             reduce using rule 4 (global_declaration -> declaration .)
    FLOAT           reduce using rule 4 (global_declaration -> declaration .)
    LPAREN          reduce using rule 4 (global_declaration -> declaration .)
    TIMES           reduce using rule 4 (global_declaration -> declaration .)
    ID              reduce using rule 4 (global_declaration -> declaration .)
    $end            reduce using rule 4 (global_declaration -> declaration .)


state 5

    (5) global_declaration -> function_definition .

    VOID            reduce using rule 5 (global_declaration -> function_definition .)
    CHAR            reduce using rule 5 (global_declaration -> function_definition .)
    INT             reduce using rule 5 (global_declaration -> function_definition .)
    FLOAT           reduce using rule 5 (global_declaration -> function_definition .)
    LPAREN          reduce using rule 5 (global_declaration -> function_definition .)
    TIMES           reduce using rule 5 (global_declaration -> function_definition .)
    ID              reduce using rule 5 (global_declaration -> function_definition .)
    $end            reduce using rule 5 (global_declaration -> function_definition .)


state 6

    (6) declaration -> decl_body . SEMI

    SEMI            shift and go to state 20


state 7

    (122) function_definition -> type_specifier . declarator declaration_list_opt compound_statement
    (11) decl_body -> type_specifier . init_declarator_list_opt
    (14) declarator -> . direct_declarator
    (15) declarator -> . pointer direct_declarator
    (20) init_declarator_list_opt -> . init_declarator_list
    (21) init_declarator_list_opt -> . empty
    (25) direct_declarator -> . identifier
    (26) direct_declarator -> . LPAREN declarator RPAREN
    (27) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (28) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN
    (29) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (12) pointer -> . TIMES
    (13) pointer -> . TIMES pointer
    (18) init_declarator_list -> . init_declarator
    (19) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (124) empty -> .
    (79) identifier -> . ID
    (16) init_declarator -> . declarator
    (17) init_declarator -> . declarator ASSIGN initializer

    LPAREN          shift and go to state 16
    TIMES           shift and go to state 17
    SEMI            reduce using rule 124 (empty -> .)
    ID              shift and go to state 18

    declarator                     shift and go to state 21
    init_declarator_list_opt       shift and go to state 22
    direct_declarator              shift and go to state 13
    pointer                        shift and go to state 14
    init_declarator_list           shift and go to state 23
    empty                          shift and go to state 24
    identifier                     shift and go to state 15
    init_declarator                shift and go to state 25

state 8

    (123) function_definition -> declarator . declaration_list_opt compound_statement
    (9) declaration_list_opt -> . declaration_list
    (10) declaration_list_opt -> . empty
    (7) declaration_list -> . declaration
    (8) declaration_list -> . declaration_list declaration
    (124) empty -> .
    (6) declaration -> . decl_body SEMI
    (11) decl_body -> . type_specifier init_declarator_list_opt
    (89) type_specifier -> . VOID
    (90) type_specifier -> . CHAR
    (91) type_specifier -> . INT
    (92) type_specifier -> . FLOAT

    LBRACES         reduce using rule 124 (empty -> .)
    VOID            shift and go to state 9
    CHAR            shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12

    declaration_list_opt           shift and go to state 26
    declaration_list               shift and go to state 27
    empty                          shift and go to state 28
    declaration                    shift and go to state 29
    decl_body                      shift and go to state 6
    type_specifier                 shift and go to state 30

state 9

    (89) type_specifier -> VOID .

    LPAREN          reduce using rule 89 (type_specifier -> VOID .)
    TIMES           reduce using rule 89 (type_specifier -> VOID .)
    ID              reduce using rule 89 (type_specifier -> VOID .)
    SEMI            reduce using rule 89 (type_specifier -> VOID .)
    RPAREN          reduce using rule 89 (type_specifier -> VOID .)


state 10

    (90) type_specifier -> CHAR .

    LPAREN          reduce using rule 90 (type_specifier -> CHAR .)
    TIMES           reduce using rule 90 (type_specifier -> CHAR .)
    ID              reduce using rule 90 (type_specifier -> CHAR .)
    SEMI            reduce using rule 90 (type_specifier -> CHAR .)
    RPAREN          reduce using rule 90 (type_specifier -> CHAR .)


state 11

    (91) type_specifier -> INT .

    LPAREN          reduce using rule 91 (type_specifier -> INT .)
    TIMES           reduce using rule 91 (type_specifier -> INT .)
    ID              reduce using rule 91 (type_specifier -> INT .)
    SEMI            reduce using rule 91 (type_specifier -> INT .)
    RPAREN          reduce using rule 91 (type_specifier -> INT .)


state 12

    (92) type_specifier -> FLOAT .

    LPAREN          reduce using rule 92 (type_specifier -> FLOAT .)
    TIMES           reduce using rule 92 (type_specifier -> FLOAT .)
    ID              reduce using rule 92 (type_specifier -> FLOAT .)
    SEMI            reduce using rule 92 (type_specifier -> FLOAT .)
    RPAREN          reduce using rule 92 (type_specifier -> FLOAT .)


state 13

    (14) declarator -> direct_declarator .
    (27) direct_declarator -> direct_declarator . LBRACKET constant_expression_opt RBRACKET
    (28) direct_declarator -> direct_declarator . LPAREN identifier_list_opt RPAREN
    (29) direct_declarator -> direct_declarator . LPAREN parameter_list RPAREN

    VOID            reduce using rule 14 (declarator -> direct_declarator .)
    CHAR            reduce using rule 14 (declarator -> direct_declarator .)
    INT             reduce using rule 14 (declarator -> direct_declarator .)
    FLOAT           reduce using rule 14 (declarator -> direct_declarator .)
    LBRACES         reduce using rule 14 (declarator -> direct_declarator .)
    ASSIGN          reduce using rule 14 (declarator -> direct_declarator .)
    COMMA           reduce using rule 14 (declarator -> direct_declarator .)
    SEMI            reduce using rule 14 (declarator -> direct_declarator .)
    RPAREN          reduce using rule 14 (declarator -> direct_declarator .)
    LBRACKET        shift and go to state 31
    LPAREN          shift and go to state 32


state 14

    (15) declarator -> pointer . direct_declarator
    (25) direct_declarator -> . identifier
    (26) direct_declarator -> . LPAREN declarator RPAREN
    (27) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (28) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN
    (29) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (79) identifier -> . ID

    LPAREN          shift and go to state 16
    ID              shift and go to state 18

    direct_declarator              shift and go to state 33
    identifier                     shift and go to state 15

state 15

    (25) direct_declarator -> identifier .

    LBRACKET        reduce using rule 25 (direct_declarator -> identifier .)
    LPAREN          reduce using rule 25 (direct_declarator -> identifier .)
    VOID            reduce using rule 25 (direct_declarator -> identifier .)
    CHAR            reduce using rule 25 (direct_declarator -> identifier .)
    INT             reduce using rule 25 (direct_declarator -> identifier .)
    FLOAT           reduce using rule 25 (direct_declarator -> identifier .)
    LBRACES         reduce using rule 25 (direct_declarator -> identifier .)
    ASSIGN          reduce using rule 25 (direct_declarator -> identifier .)
    COMMA           reduce using rule 25 (direct_declarator -> identifier .)
    SEMI            reduce using rule 25 (direct_declarator -> identifier .)
    RPAREN          reduce using rule 25 (direct_declarator -> identifier .)


state 16

    (26) direct_declarator -> LPAREN . declarator RPAREN
    (14) declarator -> . direct_declarator
    (15) declarator -> . pointer direct_declarator
    (25) direct_declarator -> . identifier
    (26) direct_declarator -> . LPAREN declarator RPAREN
    (27) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (28) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN
    (29) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (12) pointer -> . TIMES
    (13) pointer -> . TIMES pointer
    (79) identifier -> . ID

    LPAREN          shift and go to state 16
    TIMES           shift and go to state 17
    ID              shift and go to state 18

    declarator                     shift and go to state 34
    direct_declarator              shift and go to state 13
    pointer                        shift and go to state 14
    identifier                     shift and go to state 15

state 17

    (12) pointer -> TIMES .
    (13) pointer -> TIMES . pointer
    (12) pointer -> . TIMES
    (13) pointer -> . TIMES pointer

    LPAREN          reduce using rule 12 (pointer -> TIMES .)
    ID              reduce using rule 12 (pointer -> TIMES .)
    TIMES           shift and go to state 17

    pointer                        shift and go to state 35

state 18

    (79) identifier -> ID .

    LBRACKET        reduce using rule 79 (identifier -> ID .)
    LPAREN          reduce using rule 79 (identifier -> ID .)
    VOID            reduce using rule 79 (identifier -> ID .)
    CHAR            reduce using rule 79 (identifier -> ID .)
    INT             reduce using rule 79 (identifier -> ID .)
    FLOAT           reduce using rule 79 (identifier -> ID .)
    LBRACES         reduce using rule 79 (identifier -> ID .)
    ASSIGN          reduce using rule 79 (identifier -> ID .)
    COMMA           reduce using rule 79 (identifier -> ID .)
    SEMI            reduce using rule 79 (identifier -> ID .)
    RPAREN          reduce using rule 79 (identifier -> ID .)
    PLUS_PLUS       reduce using rule 79 (identifier -> ID .)
    MINUS_MINUS     reduce using rule 79 (identifier -> ID .)
    TIMES           reduce using rule 79 (identifier -> ID .)
    DIVIDE          reduce using rule 79 (identifier -> ID .)
    MOD             reduce using rule 79 (identifier -> ID .)
    PLUS            reduce using rule 79 (identifier -> ID .)
    MINUS           reduce using rule 79 (identifier -> ID .)
    SMALLER         reduce using rule 79 (identifier -> ID .)
    SMALLER_EQUAL   reduce using rule 79 (identifier -> ID .)
    BIGGER          reduce using rule 79 (identifier -> ID .)
    BIGGER_EQUAL    reduce using rule 79 (identifier -> ID .)
    EQUAL           reduce using rule 79 (identifier -> ID .)
    DIFFERENT       reduce using rule 79 (identifier -> ID .)
    AND             reduce using rule 79 (identifier -> ID .)
    OR              reduce using rule 79 (identifier -> ID .)
    RBRACKET        reduce using rule 79 (identifier -> ID .)
    ASSIGN_TIMES    reduce using rule 79 (identifier -> ID .)
    ASSIGN_DIVIDE   reduce using rule 79 (identifier -> ID .)
    ASSIGN_MOD      reduce using rule 79 (identifier -> ID .)
    ASSIGN_PLUS     reduce using rule 79 (identifier -> ID .)
    ASSIGN_MINUS    reduce using rule 79 (identifier -> ID .)
    RBRACES         reduce using rule 79 (identifier -> ID .)


state 19

    (3) global_declaration_list -> global_declaration_list global_declaration .

    VOID            reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    CHAR            reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    INT             reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    FLOAT           reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    LPAREN          reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    TIMES           reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    ID              reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    $end            reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)


state 20

    (6) declaration -> decl_body SEMI .

    VOID            reduce using rule 6 (declaration -> decl_body SEMI .)
    CHAR            reduce using rule 6 (declaration -> decl_body SEMI .)
    INT             reduce using rule 6 (declaration -> decl_body SEMI .)
    FLOAT           reduce using rule 6 (declaration -> decl_body SEMI .)
    LPAREN          reduce using rule 6 (declaration -> decl_body SEMI .)
    TIMES           reduce using rule 6 (declaration -> decl_body SEMI .)
    ID              reduce using rule 6 (declaration -> decl_body SEMI .)
    $end            reduce using rule 6 (declaration -> decl_body SEMI .)
    LBRACES         reduce using rule 6 (declaration -> decl_body SEMI .)
    RBRACES         reduce using rule 6 (declaration -> decl_body SEMI .)
    IF              reduce using rule 6 (declaration -> decl_body SEMI .)
    WHILE           reduce using rule 6 (declaration -> decl_body SEMI .)
    FOR             reduce using rule 6 (declaration -> decl_body SEMI .)
    BREAK           reduce using rule 6 (declaration -> decl_body SEMI .)
    RETURN          reduce using rule 6 (declaration -> decl_body SEMI .)
    ASSERT          reduce using rule 6 (declaration -> decl_body SEMI .)
    PRINT           reduce using rule 6 (declaration -> decl_body SEMI .)
    READ            reduce using rule 6 (declaration -> decl_body SEMI .)
    PLUS_PLUS       reduce using rule 6 (declaration -> decl_body SEMI .)
    MINUS_MINUS     reduce using rule 6 (declaration -> decl_body SEMI .)
    UPPERSAND       reduce using rule 6 (declaration -> decl_body SEMI .)
    PLUS            reduce using rule 6 (declaration -> decl_body SEMI .)
    MINUS           reduce using rule 6 (declaration -> decl_body SEMI .)
    NOT             reduce using rule 6 (declaration -> decl_body SEMI .)
    INT_CONST       reduce using rule 6 (declaration -> decl_body SEMI .)
    FLOAT_CONST     reduce using rule 6 (declaration -> decl_body SEMI .)
    STRING_CONST    reduce using rule 6 (declaration -> decl_body SEMI .)
    SEMI            reduce using rule 6 (declaration -> decl_body SEMI .)


state 21

    (122) function_definition -> type_specifier declarator . declaration_list_opt compound_statement
    (16) init_declarator -> declarator .
    (17) init_declarator -> declarator . ASSIGN initializer
    (9) declaration_list_opt -> . declaration_list
    (10) declaration_list_opt -> . empty
    (7) declaration_list -> . declaration
    (8) declaration_list -> . declaration_list declaration
    (124) empty -> .
    (6) declaration -> . decl_body SEMI
    (11) decl_body -> . type_specifier init_declarator_list_opt
    (89) type_specifier -> . VOID
    (90) type_specifier -> . CHAR
    (91) type_specifier -> . INT
    (92) type_specifier -> . FLOAT

    COMMA           reduce using rule 16 (init_declarator -> declarator .)
    SEMI            reduce using rule 16 (init_declarator -> declarator .)
    ASSIGN          shift and go to state 37
    LBRACES         reduce using rule 124 (empty -> .)
    VOID            shift and go to state 9
    CHAR            shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12

    type_specifier                 shift and go to state 30
    declaration_list_opt           shift and go to state 36
    declaration_list               shift and go to state 27
    empty                          shift and go to state 28
    declaration                    shift and go to state 29
    decl_body                      shift and go to state 6

state 22

    (11) decl_body -> type_specifier init_declarator_list_opt .

    SEMI            reduce using rule 11 (decl_body -> type_specifier init_declarator_list_opt .)


state 23

    (20) init_declarator_list_opt -> init_declarator_list .
    (19) init_declarator_list -> init_declarator_list . COMMA init_declarator

    SEMI            reduce using rule 20 (init_declarator_list_opt -> init_declarator_list .)
    COMMA           shift and go to state 38


state 24

    (21) init_declarator_list_opt -> empty .

    SEMI            reduce using rule 21 (init_declarator_list_opt -> empty .)


state 25

    (18) init_declarator_list -> init_declarator .

    COMMA           reduce using rule 18 (init_declarator_list -> init_declarator .)
    SEMI            reduce using rule 18 (init_declarator_list -> init_declarator .)


state 26

    (123) function_definition -> declarator declaration_list_opt . compound_statement
    (102) compound_statement -> . LBRACES block_item_list RBRACES

    LBRACES         shift and go to state 40

    compound_statement             shift and go to state 39

state 27

    (9) declaration_list_opt -> declaration_list .
    (8) declaration_list -> declaration_list . declaration
    (6) declaration -> . decl_body SEMI
    (11) decl_body -> . type_specifier init_declarator_list_opt
    (89) type_specifier -> . VOID
    (90) type_specifier -> . CHAR
    (91) type_specifier -> . INT
    (92) type_specifier -> . FLOAT

    LBRACES         reduce using rule 9 (declaration_list_opt -> declaration_list .)
    VOID            shift and go to state 9
    CHAR            shift and go to state 10
    INT             shift and go to state 11
    FLOAT           shift and go to state 12

    declaration                    shift and go to state 41
    decl_body                      shift and go to state 6
    type_specifier                 shift and go to state 30

state 28

    (10) declaration_list_opt -> empty .

    LBRACES         reduce using rule 10 (declaration_list_opt -> empty .)


state 29

    (7) declaration_list -> declaration .

    VOID            reduce using rule 7 (declaration_list -> declaration .)
    CHAR            reduce using rule 7 (declaration_list -> declaration .)
    INT             reduce using rule 7 (declaration_list -> declaration .)
    FLOAT           reduce using rule 7 (declaration_list -> declaration .)
    LBRACES         reduce using rule 7 (declaration_list -> declaration .)


state 30

    (11) decl_body -> type_specifier . init_declarator_list_opt
    (20) init_declarator_list_opt -> . init_declarator_list
    (21) init_declarator_list_opt -> . empty
    (18) init_declarator_list -> . init_declarator
    (19) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (124) empty -> .
    (16) init_declarator -> . declarator
    (17) init_declarator -> . declarator ASSIGN initializer
    (14) declarator -> . direct_declarator
    (15) declarator -> . pointer direct_declarator
    (25) direct_declarator -> . identifier
    (26) direct_declarator -> . LPAREN declarator RPAREN
    (27) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (28) direct_declarator -> . direct_declarator LPAREN identifier_list_opt RPAREN
    (29) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (12) pointer -> . TIMES
    (13) pointer -> . TIMES pointer
    (79) identifier -> . ID

    SEMI            reduce using rule 124 (empty -> .)
    LPAREN          shift and go to state 16
    TIMES           shift and go to state 17
    ID              shift and go to state 18

    init_declarator_list_opt       shift and go to state 22
    init_declarator_list           shift and go to state 23
    empty                          shift and go to state 24
    init_declarator                shift and go to state 25
    declarator                     shift and go to state 42
    direct_declarator              shift and go to state 13
    pointer                        shift and go to state 14
    identifier                     shift and go to state 15

state 31
